objects/LLC_BI__Requirement_History__c.object
<CustomObject>
    <description>Requirement History records changes to Assignee and Status of Requirements.</description>
    <fields>
        <fullName>LLC_BI__Assignee__c</fullName>
        <description>This formula field displays the name of the User or Queue who owned the Requirement at the time of the change.</description>
        <formula>BLANKVALUE( Owner:Queue.QueueName , Owner:User.FirstName + &apos; &apos; + Owner:User.LastName )</formula>
        <inlineHelpText>This formula field displays the name of the User or Queue who owned the Requirement at the time of the change.</inlineHelpText>
        <label>Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Requirement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This required field contains a reference to the Requirement to which this entry pertains.</description>
        <inlineHelpText>This required field contains a reference to the Requirement to which this entry pertains.</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>LLC_BI__Requirement__c</referenceTo>
        <relationshipLabel>Requirement History</relationshipLabel>
        <relationshipName>Requirement_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This required field contains the state of this Requirement at the time of the change.</description>
        <inlineHelpText>This required field contains the state of this Requirement at the time of the change.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Requirement_Statuses</valueSetName>
        </valueSet>
    </fields>
    <label>Requirement History</label>
    <nameField>
        <displayFormat>RH-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>